Fetch ObjectName and its relative oid_info before handling an eventual error value, so we have valid values to put in the VarBind entry.  Include the error note text as the label.

This should fix bug 2144.

svn path=/trunk/; revision=23962