asn1/snmp/packet-snmp-template.c
@@ -446,7 +446,15 @@ extern int dissect_snmp_VarBind(gboolean implicit_tag _U_,
 	pi_name = proto_tree_add_item(pt_varbind,hf_snmp_objectname,tvb,name_offset,name_len,FALSE);
 	pt_name = proto_item_add_subtree(pi_name,ett_name);
 
+	/* fetch ObjectName and its relative oid_info */
+	oid_bytes = ep_tvb_memdup(tvb, name_offset, name_len);
+	oid_info = oid_get_from_encoded(oid_bytes, name_len, &subids, &oid_matched, &oid_left);
 
+	add_oid_debug_subtree(oid_info,pt_name);
+
+	if (subids && oid_matched+oid_left) {
+		oid_string = oid_subid2string(subids,oid_matched+oid_left);
+	}
 
 	if (ber_class == BER_CLASS_CON) {
 		/* if we have an error value just add it and get out the way ASAP */
@@ -481,17 +489,8 @@ extern int dissect_snmp_VarBind(gboolean implicit_tag _U_,
 
 		pi = proto_tree_add_item(pt_varbind,hfid,tvb,value_offset,value_len,FALSE);
 		expert_add_info_format(actx->pinfo, pi, PI_RESPONSE_CODE, PI_NOTE, "%s",note);
+		strncpy (label, note, ITEM_LABEL_LENGTH);
 		goto set_label;
-	}
-
-	/* fetch ObjectName and its relative oid_info */
-	oid_bytes = ep_tvb_memdup(tvb, name_offset, name_len);
-	oid_info = oid_get_from_encoded(oid_bytes, name_len, &subids, &oid_matched, &oid_left);
-
-	add_oid_debug_subtree(oid_info,pt_name);
-
-	if (subids && oid_matched+oid_left) {
-		oid_string = oid_subid2string(subids,oid_matched+oid_left);
 	}
 
 	/* now we'll try to figure out which are the indexing sub-oids and whether the oid we know about is the one oid we have to use */
